# Rust-for-Malware-Development

./: Dockerfile  LICENSE  README.md  api_hooking.rs  copy.rs  deps.md  docker.md  evade_vm.rs  intro.rs  syscalls.rs
BSOD/: CloseWindowStation.rs  NTSD_winlogon.rs  lookupprivilegevalue.rs  ntsetinformationprocess.rs  rtladjustprivilege.rs
Basics/: CreateProcess.rs  Payload_Exec_with_explain.rs  mem_allocation.rs
EDRChecker/: Cargo.toml  README.md
Encryption Methods/: Rc4EncodeShellcode.rs  aes_shellcode_encrypt.rs  aes_shellcode_exec.rs  generate_random_aes_keys.rs  rc4_shellcode_encrypt.rs  rc4_shellcode_exec.rs  xor_encrypt.rs
Enumeration/: get_token_info.rs  spoof_img.rs  sysinfo_enum.rs
Exec_Extern/: MessageBox.rs  README.md  stomping_injection.rs
Malware_Tips/: BloatedHammer.rs  CreateThreadpoolWait.rs  SC_exec_with_QueueUserAPC  SC_exec_with_QueueUserAPC.rs  amsi_bypass.rs  block_dll_policy.rs  callback_EnumCalenderInfoA.rs  find_pid_by_name.rs  inline_assembly.rs  payload_execution_control.rs  payload_staging.rs  self_delete.rs
MessageBoxes/: README.md
Obfuscation/: main.rs
Persistence/: StartupApproved.rs  persistence_part1.rs
Process/: EnumDesktopsA.rs  ShellExecute.rs  argument_spoofing.rs  cpu_buffer.rs  createprocess.rs  hypnosis.rs  process_fiber.rs  process_hollowing.rs  remote_mapping_injection.rs
Process-Injection/: CreateMutex.rs  ThreadlessInject.rs  apc_queue_inject_new.rs  apc_queue_injection.rs  early_bird_apc_injection.rs  inject_on_localprocess.rs  inject_on_remoteprocess.rs  shellcodeExec_1.rs
Recon/extract_wifi/: Cargo.toml  README.md
Recon/extract_wifi/src/: main.rs
Reverse Shell/: README.md
Self-Deletion-Techniques/: Cargo.toml  README.md
Sleep_Obfuscations/Ekko/: Cargo.toml  READMD.md  README.md
Sleep_Obfuscations/Ekko/src/: ekko.rs  ekko_common.rs  ekko_smukx.rs  main.rs
Test_phase/: README.md  SymSrvGetFileIndexInfo.rs  (+4 more)
keylog_dropper/key_exec/: Cargo.toml
keylog_dropper/key_exec/src/: main.rs
keylogger/: Cargo.toml
keylogger/getrawinputdata/: Cargo.toml
keylogger/getrawinputdata/src/: main.rs
keylogger/src/: main.rs  tcp_keylogger.rs  tcp_receiver.rs
(+86 files in other folders)
