[package]
name = "key_exec"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
reqwest = {version= "0.12.5", features = ["blocking", "stream"]}
tokio = {version = "1.38.0", features= ["full"]}
widestring = "1.1.0"
winapi = { version = "0.3.9", features = ["winuser","setupapi","wlanapi","winnls","fileapi","sysinfoapi", "fibersapi","debugapi","winerror", "wininet" , "winhttp" ,"synchapi","securitybaseapi","wincrypt","psapi", "tlhelp32", "heapapi","shellapi", "memoryapi", "processthreadsapi", "errhandlingapi", "winbase", "handleapi", "synchapi"] }
